--- a/index-editor-editor.html
+++ b/index-editor-editor.html
@@ -25,7 +25,7 @@
   class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
 >
   <div class="container">
-    <a href="index.html"
+    <a href="index-editor-editor.html"
       ><img class="logo" src="images/logo.jpg" alt=""
     /></a>
     <button
@@ -82,13 +82,13 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"></li>
         <li class="nav-item">
-          <a class="nav-link" href="create-user.html">Bienvenido, usuario</a>
+          <a class="nav-link" href="create-user.html">Bienvenido, Periodista</a>
         </li>
         <!-- Boton de inicio (abre) -->
         <button
           onclick="document.getElementById('id01').style.display='block'"
         >
-          Inicio
+          Salir
         </button>
         <!-- The Modal -->
         <div id="id01" class="modal">
