--- a/index-editor-user.html
+++ b/index-editor-user.html
@@ -24,7 +24,7 @@
   class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
 >
   <div class="container">
-    <a href="index.html"
+    <a href="index-usuario.html"
       ><img class="logo" src="images/logo.jpg" alt=""
     /></a>
     <button
@@ -87,8 +87,9 @@
         <button
           onclick="document.getElementById('id01').style.display='block'"
         >
-          Inicio
+          Salir
         </button>
+        
         <!-- The Modal -->
         <div id="id01" class="modal">
           <span
@@ -141,7 +142,7 @@
               </button>
               <span class="psw">
                 <a href="#">has olvidado la contraseña?</a></span
-              >
+              > 
             </div>
           </form>
         </div>
