--- a/create-user.html
+++ b/create-user.html
@@ -25,7 +25,7 @@
   class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
 >
   <div class="container">
-    <a href="index.html"
+    <a href="index-invitado.html"
       ><img class="logo" src="images/logo.jpg" alt=""
     /></a>
     <button
@@ -150,7 +150,7 @@
     </div>
   </div>
 </nav>
-
+  <div class="Registro">
   <form action="/action_page.php" style="border:1px solid #ccc">
     <div class="container">
       <h1>Registrate</h1>
@@ -182,6 +182,7 @@
       </div>
     </div>
   </form>
+  </div>
   
     <!-- /.row -->
 
