--- a/new-template.html
+++ b/new-template.html
@@ -26,7 +26,7 @@
   class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
 >
   <div class="container">
-    <a href="index.html"
+    <a href="index-editor-editor.html"
       ><img class="logo" src="images/logo.jpg" alt=""
     /></a>
     <button
@@ -89,7 +89,7 @@
         <button
           onclick="document.getElementById('id01').style.display='block'"
         >
-          Inicio
+          Salir
         </button>
         <!-- The Modal -->
         <div id="id01" class="modal">
