--- a/create-user.html
+++ b/create-user.html
@@ -189,7 +189,8 @@
   </div>
 
     <!-- Footer -->
-    <footer class="dropdown-toggle-split bg-dark">
+    
+    <footer class="dropdown-toggle-split bg-dark fixed-bottom" >
       <div class="container">
         <p class="auto text-center text-white">--- Caos NEWS ----</p>
       </div>
