--- a/index-invitado.html
+++ b/index-invitado.html
@@ -23,7 +23,7 @@
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top"
     >
       <div class="container">
-        <a href="index.html"
+        <a href="index-invitado.html"
           ><img class="logo" src="images/logo.jpg" alt=""
         /></a>
         <button
