--- a/index-editor-user.html
+++ b/index-editor-user.html
@@ -16,6 +16,9 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- Buscador -->
+  <link href="css/Buscador.css" rel="stylesheet"/>
+
 </head>
 <body>
 
@@ -64,15 +67,9 @@
         </li>
         <li class="nav-item">
           <div>
-            <input
-              class="busqueda mr-sm-2"
-              type="search"
-              placeholder=" Buscador..."
-              aria-label="buscar"
-              (keyup)="buscarPalabra(buscarTexto.value)"
-              #buscarTexto
-              width="30px"
-            />
+            <div class="autocomplete" >
+              <input id="myInput" class="buscador" name="mySearch" placeholder="Buscar..." />
+            </div>
           </div>
         </li>
       </ul>
@@ -245,6 +242,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/Buscador.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   
   </body>
   
