--- a/new-template.html
+++ b/new-template.html
@@ -16,6 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
   <link href="css/notification.css" rel="stylesheet">
+  <!-- Buscador -->
+  <link href="css/Buscador.css" rel="stylesheet"/>
 
 </head>
 
@@ -66,15 +68,10 @@
         </li>
         <li class="nav-item">
           <div>
-            <input
-              class="busqueda mr-sm-2"
-              type="search"
-              placeholder=" Buscador..."
-              aria-label="buscar"
-              (keyup)="buscarPalabra(buscarTexto.value)"
-              #buscarTexto
-              width="30px"
-            />
+            <div>
+              <div class="autocomplete" >
+                <input id="myInput" class="buscador" name="mySearch" placeholder="Buscar..." />
+              </div>
           </div>
         </li>
       </ul>
@@ -255,6 +252,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/Buscador.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
 </body>
 
